--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.NutriRateApp"
         tools:targetApi="31">
         <activity
-            android:name=".Onboarding.OnboardingActivity"
+            android:name=".view.Onboarding.OnboardingActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
