--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.NutriRateApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.detail.DetailHistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.profile.ProfileActivity"
             android:exported="false" />
         <activity
