--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -34,9 +36,6 @@
             android:exported="false" />
         <activity
             android:name=".view.camera.CameraActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.welcome.WelcomeActivity"
             android:exported="false" />
         <activity
             android:name=".view.register.RegisterActivity"
